--- a/web/public/index.html
+++ b/web/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icono_netflix_nuevo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Netflix</title>
   </head>
@@ -11,3 +11,4 @@
     <div id="root"></div>
   </body>
 </html>
+
